# refactoring

./: .gitmodules  CMakeLists.txt  README.md
chap1/: CMakeLists.txt  chap1_func.cpp  chap1_naive.cpp  chap1_optimal.cpp  chap1_split.cpp
chap4/: CMakeLists.txt  chap4.cpp  production.cpp  production.h
